--- a/JulianPerrottName/Areas/Home/Views/Contact/Index.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Contact/Index.cshtml
@@ -19,31 +19,20 @@
             <div class="col-sm-8">
                 <h2 class="hl top-zero">Contact me</h2>
                 <hr>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin congue tellus ut velit mollis condimentum. Nulla egestas neque sed odio varius facilisis. Donec ac metus gravida leo dictum porttitor.</p>
-                <form role="form">
+                <form role="form" action="@Url.Action("Send"   ,"Contact",new { area = "Home" })">
                     <div class="form-group">
                         <label for="email">Your email address</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter email">
+                        <input type="email" class="form-control" id="email" name="email" placeholder="Enter email">
                     </div>
                     <div class="form-group">
                         <label for="name">Your name</label>
-                        <input type="text" class="form-control" id="name" placeholder="Enter name">
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
                     </div>
                     <div class="form-group">
                         <label for="message">Your message</label>
-                        <textarea class="form-control" rows="3" id="message" placeholder="Enter message"></textarea>
+                        <textarea class="form-control" rows="3" id="message" name="message" placeholder="Enter message"></textarea>
                     </div>
-                    <div class="form-group">
-                        <label for="exampleInputFile">Upload file</label>
-                        <input type="file" id="exampleInputFile">
-                        <p class="help-block">Attach your file here.</p>
-                    </div>
-                    <div class="checkbox">
-                        <label>
-                            <input type="checkbox"> Send a copy to myself
-                        </label>
-                    </div>
-                    <button type="submit" class="hl-btn hl-btn-green">Send request</button>
+                    <button type="submit" class="hl-btn hl-btn-green">Send Message</button>
                 </form>
             </div>
             <!-- Right column -->
@@ -54,7 +43,7 @@
                 <p>
                     Milton Keynes,<br />
                     United Kingdom,<br />
-                    Email: <a href="#">admin@mysite.com</a>
+                    Email: <a href="@Url.Action("Index"   ,"Contact",new { area = "Home" })">julian_perrott@hotmail.com</a>
                 </p>
                 <hr>
                 <!-- Google Maps -->
