--- a/JulianPerrottName/Areas/Home/Views/Home/Index.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Home/Index.cshtml
@@ -9,14 +9,17 @@
         </div>
     </div>
     <div class="container">
-        @Html.Partial("_Services")
+        @*@Html.Partial("_Services")*@
 
-        <div class="row">
+        @*<div class="row">
             @Html.Partial("_Welcome")
 
+            
+        </div>*@
+        <div class="row">
             @Html.Partial("_Updates")
-        </div>
 
-        @Html.Partial("_RecentWorks")
+        </div>
+        @*@Html.Partial("_RecentWorks")*@
     </div>
 </div>
