--- a/JulianPerrottName/Areas/Home/Views/Home/_Services.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Home/_Services.cshtml
@@ -2,25 +2,25 @@
     <div class="col-md-12">
         <div class="services">
             <ul>
-                <li>
+                <li onclick="window.location = 'http://www.codesin.net/Home/Blog/Post?PostId=5a8fe749-2921-416e-a33c-99eef0ea5122'">
                     <i class="fa fa-briefcase fa-3x"></i>
-                    <p>Lorem ipsum dolor sit amet<br /><a href="#">Action...</a></p>
-                </li>
-                <li>
-                    <i class="fa fa-cloud-upload fa-3x"></i>
-                    <p>Lorem ipsum dolor sit amet<br /><a href="#">Action...</a></p>
+                    <p>My Tools<br /><a href="http://www.codesin.net/Home/Blog/Post?PostId=5a8fe749-2921-416e-a33c-99eef0ea5122">... What I use to code</a></p>
                 </li>
                 <li>
                     <i class="fa fa-laptop fa-3x"></i>
-                    <p>Lorem ipsum dolor sit amet<br /><a href="#">Action...</a></p>
+                    <p>My Devices<br /><a href="#">... See what's on my desktop</a></p>
+                </li>
+                <li>
+                    <i class="fa fa-comments-o fa-3x"></i>
+                    <p>My Blog<br /><a href="http://www.codesin.net/blogengine/">... Simple things</a></p>
                 </li>
                 <li>
                     <i class="fa fa-gears fa-3x"></i>
-                    <p>Lorem ipsum dolor sit amet<br /><a href="#">Action...</a></p>
+                    <p>My Projects<br /><a href="#">... Bigger things</a></p>
                 </li>
                 <li>
-                    <i class="fa fa-compass fa-3x"></i>
-                    <p>Lorem ipsum dolor sit amet<br /><a href="#">Action...</a></p>
+                    <i class="fa fa-question fa-3x"></i>
+                    <p>...<br /><a href="#">... Coming soon</a></p>
                 </li>
             </ul>
             <div class="clearfix"></div>
