--- a/JulianPerrottName/Areas/Home/Views/Home/_Welcome.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Home/_Welcome.cshtml
@@ -1,11 +1,11 @@
-﻿<div class="col-md-8">
+﻿<div class="col-md-12">
     <div class="block-header">
         <h2>
             <span class="title">Welcome Message</span><span class="decoration"></span><span class="decoration"></span><span class="decoration"></span>
         </h2>
     </div>
     <div>
-        <img src="~/Areas/Home/img/ideas.jpg" class="img-about img-responsive" alt="About">
+        <img src="~/Areas/Home/img/ideas.jpg" class="img-about img-responsive" alt="About" style="width: 300px; height: 225px;">
         <p>
             Welcome to my personal site.
             <br /><br />
@@ -13,12 +13,6 @@
             <br /><br />
             Here on this site you will find examples of me experimenting with different web,server and database technologies, to try and both understand them and showcase their possibilities. Take a look at my blog and the
             projects below to see what I am having fun with.
-            <br /><br />
-            <br /><br />
         </p>
-    </div>
-    <div class="info-board info-board-blue">
-        <h4>Contact info</h4>
-        <p>Any feedback/comments/questions (good or bad) are welcome, contact information can be found in the footer.</p>
     </div>
 </div>
