--- a/JulianPerrottName/Areas/Home/Views/Shared/_Footer.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Shared/_Footer.cshtml
@@ -9,11 +9,9 @@
                 <div class="headline"><h3>Contact me</h3></div>
                 <div class="content">
                     <p>
-                        Milton Keynes,, <br />
+                        Milton Keynes, <br />
                         United Kingdom,<br />
-                        Phone: +0 000 000 00 00<br />
-                        Fax: +0 000 000 00 00<br />
-                        Email: <a href="#">admin@mysite.com</a>
+                        Email: <a href="#">julian_perrott@hotmail.com</a>
                     </p>
                 </div>
             </div>
