--- a/JulianPerrottName/Areas/Home/Views/Shared/_Legal.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Shared/_Legal.cshtml
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-sm-12">
-                <p>&copy; Julian Perrott 2014. <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
+                <p>&copy; Julian Perrott 2014.</p>
             </div>
         </div>
     </div>
