--- a/JulianPerrottName/Areas/Home/Views/Shared/_Navbar.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Shared/_Navbar.cshtml
@@ -11,11 +11,11 @@
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="@Url.Content("~")">Home</a></li>
-                <li class="dropdown">
+                @*<li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Pages <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="">None yet </a></li>
-                        <!--<li><a href="about-us.html">About Us</a></li>
+                        <li><a href="about-us.html">About Us</a></li>
                         <li><a href="blog.html">Blog</a></li>
                         <li><a href="blog-timeline.html">Blog Timeline</a></li>
                         <li><a href="blog-post.html">Blog Post</a></li>
@@ -35,33 +35,33 @@
                         <li><a href="sign-in.html">Sign In</a></li>
                         <li><a href="sign-up.html">Sign up</a></li>-->
                     </ul>
-                </li>
-                <li class="dropdown hidden-sm">
+                </li>*@
+                @*<li class="dropdown hidden-sm">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Blog <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="@Url.Action("Index","Blog",new { area = "Home" })">Blog</a></li>
                         <li><a href="@Url.Action("Timeline","Blog",new { area = "Home" })">Blog Timeline</a></li>
                         <li><a href="@Url.Action("Post","Blog",new { area = "Home" })">Blog Post</a></li>
                     </ul>
-                </li>
-                <li class="dropdown hidden-sm">
+                </li>*@
+                @*<li class="dropdown hidden-sm">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown">Gallery <b class="caret"></b></a>
                     <ul class="dropdown-menu">
                         <li><a href="@Url.Action("Text"   ,"Gallery",new { area = "Home" })">Gallery Text Blocks</a></li>
                         <li><a href="@Url.Action("Bubbles","Gallery",new { area = "Home" })">Gallery Bubbles</a></li>
                         <li><a href="@Url.Action("Item"   ,"Gallery",new { area = "Home" })">Gallery Item</a></li>
                     </ul>
-                </li>
+                </li>*@
                 <li class="hidden-sm hidden-md"><a href="@Url.Action("Index"   ,"Contact",new { area = "Home" })">Contact me</a></li>
             </ul>
             <!-- Search form for extra small screens -->
-            <form class="navbar-form navbar-left visible-xs" role="search">
+            @*<form class="navbar-form navbar-left visible-xs" role="search">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Search">
                 </div>
                 <button type="submit" class="hl-btn hl-btn-blue">Go!</button>
-            </form>
-            <ul class="nav navbar-nav navbar-right hidden-xs">
+            </form>*@
+            @*<ul class="nav navbar-nav navbar-right hidden-xs">
                 <!-- Sign in & Sign up -->
                 <!-- Signed in. Profile Menu -->
                 <li id="cogs-menu" class="hidden">
@@ -79,9 +79,9 @@
                             <div class="clearfix"></div>
                         </li>
                     </ul>
-                </li>
+                </li>*@
                 <!-- Search Button -->
-                <li id="search">
+                @*<li id="search">
                     <a href="#" id="search-btn"><i class="fa fa-search" id="search-icon"></i> Search</a>
                     <div class="search-box hidden" id="search-box">
                         <div class="input-group">
@@ -91,7 +91,7 @@
                             </span>
                         </div>
                     </div>
-                </li>
+                </li>*@
             </ul>
         </div>
     </div>
