--- a/JulianPerrottName/Areas/Home/Views/Shared/_Scripts.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Shared/_Scripts.cshtml
@@ -2,7 +2,7 @@
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
 
-<script src="~/Areas/Home/js/jquery-1.9.1.js"></script>
+<script src="~/Areas/Home/js/jquery-1.9.1.min.js"></script>
 <script src="~/Areas/Home/js/bootstrap.min.js"></script>
 <script src="~/Areas/Home/js/custom.js"></script>
 <script src="~/Areas/Home/js/scrolltopcontrol.js"></script><!-- Scroll to top javascript -->
