--- a/JulianPerrottName/Areas/Home/Views/Home/_Updates.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Home/_Updates.cshtml
@@ -1,9 +1,10 @@
 ﻿<div class="col-md-12">
-    <div class="block-header">
+    @*<div class="block-header">
         <h2>
             <span class="title">Last Updates</span><span class="decoration"></span><span class="decoration"></span><span class="decoration"></span>
         </h2>
-    </div>
+    </div>*@
+    <br />
     <ul class="nav nav-tabs">
         <li class="active"><a href="#blog" data-toggle="tab">My Blog</a></li>
         <li><a href="#news" data-toggle="tab">News</a></li>
