--- a/JulianPerrottName/Areas/Home/Views/Home/_Showcase.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Home/_Showcase.cshtml
@@ -13,9 +13,12 @@
     </div>
     <div class="col-md-6 hidden-sm hidden-xs">
         <div class="showcase">
-            <div class="iMac animated fadeInDown"></div>
-            <div class="iPad animated fadeInLeft"></div>
-            <div class="iPhone animated fadeInRight"></div>
+            <div id="iEnvyRecline" class="iEnvyRecline animated fadeInDown green-tooltip" data-toggle="tooltip" data-placement="top" title="My HP Envy Recline - Click Me!"></div>
+            <div id="iNexus7" class="iNexus7 animated fadeInLeft green-tooltip" data-toggle="tooltip" data-placement="top" title="My Nexus 7 Tablet - Click Me!"></div>
+            <div id="iMotoG" class="iMotoG animated fadeInRight green-tooltip" data-toggle="tooltip" data-placement="top" title="My Moto G Phone - Click Me!"></div>
+            <div id="iLeapMotion" class="iLeapMotion animated fadeInRight green-tooltip" data-toggle="tooltip" data-placement="top" title="Leap Motion - Click Me!">
+            </div>
         </div>
     </div>
 </div>
+
