--- a/JulianPerrottName/Areas/Home/Views/Shared/_Head.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Shared/_Head.cshtml
@@ -5,7 +5,7 @@
     <meta name="author" content="">
     <link rel="shortcut icon" href="~/Areas/Home/img/favicon.ico" type="image/x-icon">
 
-    <title>Julian Perrott - @ViewBag.Title</title
+    <title>Julian Perrott - @ViewBag.Title</title>
 
     <!-- Bootstrap core CSS -->
     <link href="~/Areas/Home/css/bootstrap.css" rel="stylesheet">
@@ -14,8 +14,9 @@
     <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="~/Areas/Home/css/animate.css" />
     <link rel="stylesheet" type="text/css" href="~/Areas/Home/css/elements.css" />
-    <link rel="stylesheet" type="text/css" href="~/Areas/Home/css/custom.css" />
+    <link rel="stylesheet" type="text/css" href="~/Areas/Home/css/jquery-ui.css" />
     <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="~/Areas/Home/css/custom.css" />
 
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
