--- a/JulianPerrottName/Areas/Home/Views/Shared/_Scripts.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Shared/_Scripts.cshtml
@@ -6,4 +6,6 @@
 <script src="~/Areas/Home/js/bootstrap.min.js"></script>
 <script src="~/Areas/Home/js/custom.js"></script>
 <script src="~/Areas/Home/js/scrolltopcontrol.js"></script><!-- Scroll to top javascript -->
+<script src="~/Areas/Home/js/jquery-ui.min.js"></script>
+<script src="~/Areas/Home/js/jquery.youtubepopup.min.js"></script>
 @*@Scripts.Render("~/bundles/jquery")*@
