Bundled JS and CSS

--- a/JulianPerrottName/Areas/Home/Views/Shared/_Navbar.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Shared/_Navbar.cshtml
@@ -6,6 +6,11 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+
+            <div class="navbar-brand" style="margin:0; padding:0">
+                <img src="/Areas/Home/img/logo.png" style="height: 49px" />
+            </div>
+
             <a class="navbar-brand" href="@Url.Content("~")">CodesIn.net</a>
         </div>
         <div class="collapse navbar-collapse">
