--- a/JulianPerrottName/Areas/Home/Views/Shared/_Head.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Shared/_Head.cshtml
@@ -7,29 +7,20 @@
 
     <title>Julian Perrott - @ViewBag.Title</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="~/Areas/Home/css/bootstrap.css" rel="stylesheet">
+    @Styles.Render("~/Areas/Home/css/bundle")
 
-    <!-- Custom styles for this template -->
-    <link href='http://fonts.googleapis.com/css?family=Lato:100,300,400' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="~/Areas/Home/css/animate.css" />
-    <link rel="stylesheet" type="text/css" href="~/Areas/Home/css/elements.css" />
-    <link rel="stylesheet" type="text/css" href="~/Areas/Home/css/jquery-ui.css" />
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="~/Areas/Home/css/custom.css" />
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-    <!--[if IE]>
-    <style>
-        .showcase {
-             zoom: 0.6;
-        }
-    </style>
-    <![endif]-->
+        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+        <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+          <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+        <![endif]-->
+        <!--[if IE]>
+        <style>
+            .showcase {
+                 zoom: 0.6;
+            }
+        </style>
+        <![endif]-->
 </head>
 
 
