--- a/JulianPerrottName/Areas/Home/Views/Home/_Showcase.cshtml
+++ b/JulianPerrottName/Areas/Home/Views/Home/_Showcase.cshtml
@@ -2,7 +2,7 @@
     <div class="col-md-6 col-sm-12">
         <div class="animated slideInDown">
             
-            <h1>Julian Perrott</h1>
+            <h1 style="background: rgba(0, 0, 0, 0.1);">Julian Perrott</h1>
         </div>
         <div class="list">
             <ul>
