Feedback Demo for blog

--- a/JulianPerrottName/Areas/Feedback/Views/Demo/Index.cshtml
+++ b/JulianPerrottName/Areas/Feedback/Views/Demo/Index.cshtml
@@ -2,7 +2,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2><a href="@Url.Action("Index","PostRedirectGet")">Post Redirect Get</a></h2>
-<h2><a href="@Url.Action("Index", "PostRedirectGetRedirectGet")">Post Redirect Get Redirect Get</a></h2>
-<h2><a href="@Url.Action("Index","SignalR")">Signal R</a></h2>
+<h2><a href="@Url.Action("Index","PostRedirectGet")">Post Redirect Get (Simple Call to Server)</a></h2>
+<h2><a href="@Url.Action("Index", "PostRedirectGetRedirectGet")">Post Redirect Get Redirect Get (Client Pull)</a></h2>
+<h2><a href="@Url.Action("Index","SignalR")">Signal R (Server Push)</a></h2>
 
