--- a/JulianPerrottName/Areas/Feedback/Views/SignalR/WaitForCompletion.cshtml
+++ b/JulianPerrottName/Areas/Feedback/Views/SignalR/WaitForCompletion.cshtml
@@ -4,7 +4,8 @@
 }
 <div class="well">
     <p>Waiting to complete: @DateTime.Now.ToLongTimeString()</p>
-    img src="~/Areas/Feedback/images/ajax-loader.gif" />
+    <img src="~/Areas/Feedback/images/ajax-loader.gif" />
+
 </div>
 
 <p>The server is running the task. This can take up to a minute.</p>
@@ -35,5 +36,5 @@
 </script>
 
 
-<b>Signal R messages:</b>
+<b>Signal R (Server Pushed) messages:</b>
 <ul id="messages"></ul>
