--- a/JulianPerrottName/Areas/Feedback/Views/Shared/_Layout.cshtml
+++ b/JulianPerrottName/Areas/Feedback/Views/Shared/_Layout.cshtml
@@ -10,6 +10,7 @@
  
     <title>@ViewBag.Title</title>
     <link href="~/Areas/Feedback/css/bootstrap.css" rel="stylesheet" />
+    <script src="~/Areas/Feedback/js/jquery-1.9.1.js"></script>
 </head>
 <body>
     <h3>@ViewBag.Title</h3>
